--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,34 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.exclus.smsshortcut.app">
+          package="com.exclus.smsshortcut.app" >
 
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
-    <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
-    <uses-permission android:name="android.permission.SEND_SMS" />
+  <uses-permission android:name="android.permission.READ_CONTACTS" />
+  <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
+  <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
+  <uses-permission android:name="android.permission.SEND_SMS" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+  <application
+      android:allowBackup="true"
+      android:icon="@drawable/ic_launcher"
+      android:label="@string/app_name"
+      android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+
+    <!-- android:theme="@style/AppTheme" > -->
+
+    <activity
+        android:name="com.exclus.smsshortcut.app.PreferencesActivity"
+        android:windowSoftInputMode="stateHidden|adjustResize"
+
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+        android:launchMode="singleTop" />
 
-        <!-- android:theme="@style/AppTheme" > -->
+    <intent-filter>
+      <action android:name="android.intent.action.MAIN" />
 
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTop" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+      <category android:name="android.intent.category.LAUNCHER" />
+    </intent-filter>
+  </activity>
+  <activity
+      android:name="com.exclus.smsshortcut.app.MainActivity"
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".PreferencesActivity"
-            android:label="@string/title_activity_preferences" >
-        </activity>
-    </application>
+      android:windowSoftInputMode="stateHidden|adjustResize" >
+  </activity>
+</application>
 
-</manifest>
+    </manifest>
