--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.squareup.retrofit:retrofit:1.5.1'
 }
