--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,16 @@
   <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
   <uses-permission android:name="com.android.launcher.permission.UNINSTALL_SHORTCUT" />
   <uses-permission android:name="android.permission.SEND_SMS" />
+  <uses-permission android:name="android.permission.INTERNET"/>
 
   <application
       android:allowBackup="true"
       android:icon="@drawable/ic_launcher"
       android:label="@string/app_name"
-      android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+      android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+
+    <!--android:theme="@android:style/Theme.Holo.NoActionBar.Fullscreen" >-->
+
 
     <activity
         android:name=".MainActivity"
