--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     buildToolsVersion '19.0.1'
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 7
         targetSdkVersion 19
         versionCode 1
         versionName "1.0"
@@ -33,4 +33,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.squareup.retrofit:retrofit:1.5.1'
+    //    compile "com.android.support:appcompat-v7:19.1.+"
+//    compile 'com.android.support:support-v4:+'
 }
