--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.exclus.smsshortcut.app" >
+          package="com.exclus.smsshortcut">
 
   <uses-permission android:name="android.permission.READ_CONTACTS" />
   <uses-permission android:name="com.android.launcher.permission.INSTALL_SHORTCUT" />
@@ -10,7 +10,7 @@
 
   <application
       android:allowBackup="true"
-      android:icon="@drawable/ic_launcher"
+      android:icon="@drawable/smsshortcut"
       android:label="@string/app_name"
       android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
 
